# cairos

./: .gitignore  CONTRIBUTING.md  cairos.opam  cairos_finance.opam  cairos_io.opam  cairos_jupyter.opam  cairos_plot.opam  dune-project  justfile  pins.json
.github/actions/ocaml-deps/: action.yaml
.github/workflows/: lint.yaml  main.yaml  pr.yaml
bench/: bench_cumprod.ml  bench_dropna.ml  bench_series_map.ml  dune
lib/: align.ml  align.mli  dune  frame.ml  frame.mli  freq.ml  freq.mli  index.ml  index.mli  nonempty.ml  nonempty.mli  resample.ml  resample.mli  series.ml  series.mli  window.ml  window.mli
lib/cairos_finance/: cairos_finance.ml  cairos_finance.mli  dune
lib/cairos_io/: cairos_io.ml  cairos_io.mli  dune
lib/cairos_jupyter/: cairos_jupyter.ml  cairos_jupyter.mli  dune
lib/cairos_plot/: cairos_plot.ml  cairos_plot.mli  dune
notebooks/: 01_core_tour.ml  01_sma_crossover.ml  02_bollinger_bands.ml  02_sma_crossover_backtest.ml  03_bollinger_reversion_backtest.ml  _helpers.ml  jupytext.toml  notebook_helpers.ml
notebooks/data/: 01_core_tour.csv  02_sma_crossover.csv  03_bollinger_reversion.csv
test/: dune
test/unit/cairos/: dune  test_align.ml  test_align_props.ml  test_frame.ml  test_frame_props.ml  test_helpers.ml  test_index.ml  test_index_props.ml  test_nonempty.ml  test_nonempty_props.ml  test_resample.ml  test_resample_props.ml  test_runner.ml  test_series.ml  test_series_dropna.ml  test_series_props.ml  test_series_scan.ml  test_window.ml  test_window_props.ml
test/unit/cairos_finance/: cross_validate.ml  dune  finance_test_helpers.ml  finance_test_helpers.mli  test_finance_props.ml  test_metrics.ml
test/unit/cairos_io/: dune  test_cairos_io.ml
test/unit/cairos_io/fixtures/: frame_bad_cell_at_3_2.csv  frame_bad_ts_at_4.csv  frame_duplicate_header.csv  frame_header_only.csv  frame_no_header.csv  frame_no_header_wider_subsequent.csv  frame_non_monotonic.csv  frame_offset_listings.csv  frame_short_row_at_4.csv  frame_three_tickers.csv  frame_timestamps_only.csv  frame_with_inf.csv  single_bad_price_at_2.csv  single_bad_ts_at_3.csv  single_daily_bom.csv  single_daily_crlf.csv  single_daily_standard.csv  single_hourly_standard.csv  single_inf_price_at_6.csv  single_minute_standard.csv  single_nan_price_at_5.csv  single_no_header_swapped.csv  single_non_monotonic.csv  single_quoted_timestamp.csv  single_short_row_at_4.csv  single_weekly_standard.csv
test/unit/cairos_plot/: dune  test_plot.ml
test/unit/support/: dune  qcheck_gen.ml  qcheck_gen.mli
validation/: pyproject.toml  reference.py
