(library
 (name test_helpers)
 (modules test_helpers)
 (libraries cairos nx ptime fmt alcotest))

(test
 (name test_index)
 (modules test_index)
 (libraries test_helpers cairos nx ptime fmt alcotest))

(test
 (name test_series)
 (modules test_series)
 (libraries test_helpers cairos nx ptime fmt alcotest))

(test
 (name test_align)
 (modules test_align)
 (libraries test_helpers cairos nx ptime fmt alcotest))

(test
 (name test_window)
 (modules test_window)
 (libraries test_helpers cairos nx ptime fmt alcotest))

(test
 (name test_resample)
 (modules test_resample)
 (libraries test_helpers cairos nx ptime fmt alcotest))

(test
 (name test_frame)
 (modules test_frame)
 (libraries test_helpers cairos nx ptime fmt alcotest))
